Fix login redirect from '/login' to 'login.html'

--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<!DOCTYPE html>\n<html lang="en">\n<head>\n    <meta charset="UTF-8">\n    <meta name="viewport" content="width=device-width, initial-scale=1.0">\n    <title>My First Web App</title>\n</head>\n<body>\n    <h1>Welcome to My First Web App</h1>\n    <script>\n        // Simulate a login redirect\n        window.location.href = 'login.html'; // Update redirect for static hosting\n    <\/script>\n</body>\n</html>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>My First Web App</title>
+</head>
+<body>
+    <h1>Welcome to My First Web App</h1>
+    <p>Redirecting to login page...</p>
+    <script>
+        window.location.href = 'login.html';
+    </script>
+</body>
+</html>
